<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  - (from the Strings.xml file from the Sunshine project)                                                                               -
  - Throughout this file, you will see <xliff:g> tags. These help any potential translators    -
  - properly translate your strings and also give developers that are looking at your strings  -
  - an idea of exactly how they are used.                                                      -
  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->

<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">TagSaleNow</string>
    <string name="act_name_addtagsale">AddTagSale</string>
    <string name="act_name_viewtagsale">ViewTagSale</string>
    <string name="act_name_addreview">AddReview</string>
    <string name="act_name_addfriend">AddFriend</string>
    <string name="act_name_acceptfriend">AcceptFriend</string>

    <string name="coming_soon">COMING SOON</string>
    <string name="action_settings">Settings</string>

    <string name="fake_place">100 Main St.</string>
    <string name="fake_distance">3.5 m</string>
    <string name="fake_friendsattending">-</string>
    <string name="fake_date">Nov 5</string>

    <string name="header_tsl_onsite">On Site</string>
    <string name="header_tsl_address">Address</string>
    <string name="header_tsl_friends_attending">F Att</string>
    <string name="header_tsl_distance_unit">Miles</string>
    <string name="header_tsl_date">Date</string>
    <string name="header_tsl_attending">Attending</string>

    <string name="tsl_distance_unit">mi.</string>
    <string name="tsl_distance">%.1f%n mi.</string>


    <string name="sign_out">Sign Out</string>
    <string name="TAG_FRAGMENT_TAGSALELIST">tagsalelist</string>
    <string name="TAG_FRAGMENT_FRIENDLIST">friendlist</string>
    <string name="TAG_FRAGMENT_WEATHERPANEL">weatherpanel</string>
    <string name="TAG_FRAGMENT_VIEWTAGSALE">viewtagsale</string>
    <string name="TAG_FRAGMENT_REVIEWLIST">viewtagsale</string>

    <string name="heading_tag_sale_list">Tag Sales</string>
    <string name="heading_friend_list">Friends</string>
    <string name="heading_friend_request_list">Friend Requests</string>
    <string name="heading_reviews_list">Reviews</string>
    <string name="heading_tag_sale_details">Tag Sale Details</string>

    <string name="label_where">Where:</string>
    <string name="label_when">When:</string>
    <string name="label_description">What:</string>

    <string name="wf_temperature_label">Temperature : </string>
    <string name="wf_temperature_units"> &#176; F</string>

    <string name="cd_weather_icon">Weather Icon</string>

    <string name="plus_sign">+</string>
    <string name="add_tagsale">Add Tag Sale</string>
    <string name="add_friend">Add Friend</string>
    <!-- Tag Sale Entry -->
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip</string>
    <string name="hint_date">Date</string>
    <string name="hint_time_start">Start</string>
    <string name="hint_time_end">End</string>
    <string name="hint_description">Description</string>

    <!-- Review Entry -->
    <string name="hint_review">Enter Review</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_update">Update</string>
    <string name="button_test">Test</string>
    <string name="button_add">Add</string>

    <!-- Tag Sale Review -->
    <string name="add_review">Add Review</string>

    <!-- Friend Entry -->
    <string name="hint_friendemail">Enter Friend Email</string>

    <!-- Friend Request List -->
    <string name="accept_friend">Accept Friend</string>

    <!-- - - - - - - - - - - - - - -
  - Used by SunshineDateUtils  -
  - - - - - - - - - - - - - - -->

    <!-- For labelling today's forecast -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format -->
    <string name="format_full_friendly_date">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>
    <!-- - - - - - - - - - - - - - - -
      - Used by SunshinePreferences  -
      - - - - - - - - - - - - - - - -->

    <!-- Label for the location preference -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference -->
    <string name="pref_location_default" translatable="false">Mountain View, CA 94043</string>

    <!-- Key name for temperature unit preference in SharedPreferences -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <string name="pref_last_notification">last_notification</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="appwidget_heading_text">Tag Sale Now</string>
    <string name="appwidget_nothing_text">Nothing to show</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_heading_date">Date</string>
    <string name="appwidget_heading_time">Time</string>
    <string name="appwidget_heading_address">Address</string>

    <!-- Content Descriptions -->
    <string name="cd_tag_sale_list_screen">Tag Sale List</string>
    <string name="cd_tag_sale_detail_screen">Tag Sale Details</string>
    <string name="cd_tag_sale_review_screen">Tag Sale Reviews List</string>
    <string name="cd_tag_sale_friend_request_screen">Friend Request List</string>
    <string name="cd_friend_list_screen">Friend List</string>
    <string name="no_location_permission_msg">onRequestPermissionResults - denied or cancelled</string>
    <string name="toast_show_permission_explanation">SHOW PERMISSION EXPLANATION</string>
    <string name="toast_friend_found">Found:</string>

</resources>
