<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:background="@color/colorPrimary"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/ts_placetv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/header_tsl_onsite"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"

        />
    <TextView
        android:id="@+id/ts_placetv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/header_tsl_address"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        />
    <TextView
        android:id="@+id/ts_distancetv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:singleLine="true"
        android:text="@string/header_tsl_distance_unit"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        />
    <TextView
        android:id="@+id/ts_planningtoattendcb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/header_tsl_attending"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        />

</LinearLayout>