<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorLightBlue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/te_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorLightBlue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
    <android.support.design.widget.TextInputEditText
            android:id="@+id/te_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorLightBlue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
    <android.support.design.widget.TextInputEditText
            android:id="@+id/te_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_state"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorLightBlue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
    <android.support.design.widget.TextInputEditText
            android:id="@+id/te_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_zip"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorLightBlue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
    <android.support.design.widget.TextInputEditText
            android:id="@+id/te_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorLightBlue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
    <android.support.design.widget.TextInputEditText
            android:id="@+id/te_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorLightBlue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
    <android.support.design.widget.TextInputEditText
            android:id="@+id/te_time_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_time_start"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/colorLightBlue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/te_time_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_time_end"/>
    </android.support.design.widget.TextInputLayout>



</LinearLayout>