<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:boxBackgroundColor="@color/colorLightBlue">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/te_friendemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_friendemail" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/tsadd_horiz_padd"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_test"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/tsadd_horiz_padd"
            android:text="@string/button_test" />

        <Button
            android:id="@+id/button_add"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/tsadd_horiz_padd"
            android:text="@string/button_add" />

    </LinearLayout>

</LinearLayout>