<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:contentDescription="@string/cd_tag_sale_list_screen"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/tsrev_left_margin"
    android:layout_marginEnd="@dimen/tsrev_right_margin"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_tag_sale_list"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/button_addtagsale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="@dimen/tsadd_horiz_padd"
        android:text="@string/add_tagsale"
        style="@style/Widget.AppCompat.Button.Colored"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <include layout="@layout/tagsalelistheader" />

</LinearLayout>


    <android.support.v7.widget.RecyclerView

        android:id="@+id/rv_tagsalelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tslist_left_margin"
        android:layout_marginEnd="@dimen/tslist_right_margin"

        tools:context="com.example.android.tagsalenow"

        tools:listitem="@layout/tagsalelistitem" />

</LinearLayout>