<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    >
    <include layout="@layout/fragment_tagsaledetails" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:boxBackgroundColor="@color/colorLightBlue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/te_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_review"/>
    </android.support.design.widget.TextInputLayout>


    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="0.0"
        android:stepSize="1.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_cancel"
            android:paddingHorizontal="@dimen/tsadd_horiz_padd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_cancel"
            style="@style/Widget.AppCompat.Button.Colored"/>
        <Button
            android:id="@+id/button_add"
            android:paddingHorizontal="@dimen/tsadd_horiz_padd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_add"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

</LinearLayout>