<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/tag_sale_now_logo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appwidget_heading_background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/widget_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:paddingHorizontal="@dimen/widget_horiz_padding"
                android:text="@string/appwidget_heading_date"
                android:textColor="@color/appwidget_body_text"
                android:textSize="@dimen/widget_body_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:paddingHorizontal="@dimen/widget_horiz_padding"
                android:text="@string/appwidget_heading_time"
                android:textColor="@color/appwidget_body_text"
                android:textSize="@dimen/widget_body_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:singleLine="true"
                android:paddingHorizontal="@dimen/widget_horiz_padding"
                android:text="@string/appwidget_heading_address"
                android:textColor="@color/appwidget_body_text"
                android:textSize="@dimen/widget_body_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/widget_margin">

            <ListView
                android:id="@+id/lv_tagsales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="@android:color/black" />

            <TextView
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/appwidget_nothing_text"
                android:textColor="#ffffff"
                android:textSize="@dimen/widget_body_text_size"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>